--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   Quick Reads
                 </h3>
                 <div>
-                  <img src="resources/book13(1).jpg" onclick="window.location.href='ssPange';" width="100px" height="100px">
+                  <img src="resources/book13(1).jpg" onclick="window.location.href='ssPage.html';" width="100px" height="100px">
                   <p>
                     Short Stories
                   </p>
