--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Learn how to code
             </h3>
             <div>
-            <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px" style="cursor:pointer;object-fit:scale-down;">
+            <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px" style="cursor:pointer;object-position:50% 50%;">
               <p>
                 Computer Science books
               </p>
@@ -66,7 +66,7 @@
                   Learn some Astrophysics
                 </h3>
                 <div>
-                  <img src="resources/book4(1).jpg" onclick="window.location.href='sciPage.html';" width="100px" height="10%" style="cursor:pointer;object-fit:scale-down;">
+                  <img src="resources/book4(1).jpg" onclick="window.location.href='sciPage.html';" width="100px" height="100px" style="cursor:pointer;">
                   <p>
                     Science
                   </p>
@@ -77,7 +77,7 @@
                   Quick Reads
                 </h3>
                 <div>
-                  <img src="resources/book13(1).jpg" onclick="window.location.href='ssPage.html';" width="100px" height="10%" style="cursor:pointer;object-fit:scale-down;">
+                  <img src="resources/book13(1).jpg" onclick="window.location.href='ssPage.html';" width="100px" height="100px" style="cursor:pointer;">
                   <p>
                     Short Stories
                   </p>
@@ -90,7 +90,7 @@
                   Space
                 </h3>
                 <div>
-                  <img src="resources/book17(1).jpg" onclick="window.location.href='spPage.html';" width="100px" height="10%" style="cursor:pointer;object-fit:scale-down;">
+                  <img src="resources/book17(1).jpg" onclick="window.location.href='spPage.html';" width="100px" height="100px" style="cursor:pointer;">
                   <p>
                     Space
                   </p>
@@ -101,7 +101,7 @@
                   Uncertainty
                 </h3>
                 <div>
-                  <img src="resources/book10(1).jpg" onclick="window.location.href='uPage.html';" width="100px" height="10%" style="cursor:pointer;object-fit:scale-down;">
+                  <img src="resources/book10(1).jpg" onclick="window.location.href='uPage.html';" width="100px" height="100px" style="cursor:pointer;">
                   <p>
                     Uncertainty
                   </p>
