--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Learn how to code
             </h3>
             <div>
-            <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px" style="cursor:pointer;object-position:50% 50%;">
+            <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px" style="cursor:pointer;clip-path:ellipse(175px 80px)">
               <p>
                 Computer Science books
               </p>
