--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <hr>
     <table style="padding:5px;width:100%;">
       <tr>
-          <td style="padding:5px;justify-content: center;">
+          <td style="padding:5px;text-align:center;">
             <h3 class="underine">
               Learn how to code
             </h3>
             <div>
-            <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px" style="cursor:pointer;clip-path:ellipse(175px 80px);">
+            <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="45%" height="200px" style="cursor:pointer;clip-path:ellipse(175px 80px);">
               <p>
                 Computer Science books
               </p>
