--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </nav>
     <hr>
-    <table style="padding:5px;width:100%;">
+    <table style="padding:5px;width:100%;background-color:#fea004;">
       <tr>
           <td style="padding:5px;text-align:center;">
             <h3 class="underine">
@@ -60,7 +60,7 @@
           </td>
           <td>
           <table style="padding:5px;">
-            <tr>
+            <tr style="text-align:center">
               <td style="padding:5px;">
                 <h3 class="underline">
                   Learn some Astrophysics
