--- a/QS.html
+++ b/QS.html
@@ -54,7 +54,7 @@
         <table>
           <tr>
             <td>
-              <img src="resources/book1(1).jpg" id="pict1 shake" width="auto" height="700px">
+              <img src="resources/book1(1).jpg" id="pict1" width="auto" height="700px">
             </td>
           </tr>
         </table>
@@ -75,7 +75,7 @@
         </div>
       </td>
       <td>
-        <fieldset class="desc">
+        <fieldset class="desc" id="shake">
           <div>
             <h2 id="bookTitle">
               Quantum Supremacy
