--- a/QS.html
+++ b/QS.html
@@ -26,6 +26,7 @@
           </span>
         </b>
       </h2>
+      <hr style="margin-right:90%;">
       <span style="text-align:right;">
         <i class="icon fa fa-github-square" style="color:black;"
           onclick="window.location.href='https://github.com/caleb-sudo';"></i>
