--- a/Cart.html
+++ b/Cart.html
@@ -27,6 +27,7 @@
             </span>
           </b>
         </h2>
+        <hr style="margin-right:10%;">
         <span style="text-align:right;">
           <i class="icon fa fa-github-square" style="color:black;"
             onclick="window.location.href='https://github.com/caleb-sudo';"></i>
