--- a/AGL.html
+++ b/AGL.html
@@ -40,7 +40,7 @@
     </div>
     <div class="dropdown">
       <div class="menu">
-        Catagorys
+        Catagories
       </div>
       <div class="dropdown-content">
         <a href="sciPage.html">
