--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
       <div class="menu fa fa-home" onclick="window.location.href='index.html';">
         Home
       </div>
+      <div class="dropdown">
+        <div class="menu">
+          Catagories
+        </div>
+        <div class="dropdown-content">
+          <a href="sciPage.html">
+            Science
+          </a>
+          <hr>
+          <a href="spPage.html">
+            Space
+          </a>
+          <hr>
+          <a href="csPage.html">
+            Computer Science
+          </a>
+          <hr>
+          <a href="ssPage.html">
+            Short Stories
+          </a>
+        </div>
+      </div>
       <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
         Lookup
       </div>
