--- a/uPage.html
+++ b/uPage.html
@@ -36,26 +36,27 @@
     <div class="menu fa fa-home" onclick="window.location.href='index.html';">
       Home
     </div>
-    <div class="menu fa fa-search dropdown">
-    </div>
-    <div class="dropdownItems">
-      <ul>
-        <li onclick="window.location.href='csPage.html';">
-          Computer Science
-        </li>
-        <li onclick="window.location.href='sciPage.html';">
+    <div class="dropdown">
+      <div class="menu">
+        Catagories
+      </div>
+      <div class="dropdown-content">
+        <a href="sciPage.html">
           Science
-        </li>
-        <li onclick="window.location.href='spPage.html';">
+        </a>
+        <hr>
+        <a href="spPage.html">
           Space
-        </li>
-        <li onclick="window.location.href='uPage.html';">
-          Uncertainty
-        </li>
-        <li onclick="window.location.href='ssPage.html';">
+        </a>
+        <hr>
+        <a href="csPage.html">
+          Computer Science
+        </a>
+        <hr>
+        <a href="ssPage.html">
           Short Stories
-        </li>
-      </ul>
+        </a>
+      </div>
     </div>
     <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
       Lookup
