--- a/spPage.html
+++ b/spPage.html
@@ -183,6 +183,42 @@
             </div>
           </td>
         </tr>
+        <tr>
+          <td class="book" onclick="window.location.href='AGL.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
+              <br>
+              <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      An Astronaut's Guide to Life
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Chris">
+                  By: Chris Hadfield
+                </span>
+                <br>
+                <span class="cost">
+                  $10.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem(`An Astronaut's Guide to Life`, 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+        </tr>
       </table>
     </section>
     <br>
