--- a/spPage.html
+++ b/spPage.html
@@ -218,6 +218,40 @@
               </button>
             </div>
           </td>
+          <td class="book" onclick="window.location.href='TAM.html';">
+            <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
+              <br>
+              <img src="resources/book19(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      The Apollo Murders
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Chris Hadfield
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('The Apollo Murders', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
         </tr>
       </table>
     </section>
