--- a/uPage.html
+++ b/uPage.html
@@ -97,6 +97,152 @@
           </div>
           <br>
           <br>
+          <article>
+            <section class="booksSect">
+              <table class="booksTable">
+                <tr class="booksRow">
+                  <td class="book" onclick="window.location.href='TBP.html';">
+                    <div class="card">
+                      <span class="genre">
+                        Fiction
+                      </span>
+                      <span class="topic Uncertainty">
+                        Uncertainty
+                      </span>
+                      <br>
+                      <br>
+                      <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: auto;">
+                      <br>
+                      <span>
+                        <span class="title" style="font-size: larger;">
+                          <b>
+                            <a>
+                              The Three Body Problem Trilogy
+                            </a>
+                          </b>
+                        </span>
+                        <br>
+                        <span class="auther Cixin">
+                          By: Cixin Liu
+                        </span>
+                        <br>
+                        <span class="cost">
+                          $60.00
+                        </span>
+                      </span>
+                      <button onclick="localStorage.setItem('The Three Body Problem Trilogy', 1);alert('Added to your cart');">
+                        Add to Cart
+                      </button>
+                    </div>
+                  </td>
+                  <td class="book" onclick="window.location.href='SE.html';">
+                    <div class="card">
+                      <span class="genre">
+                        Fiction
+                      </span>
+                      <span class="topic Uncertainty">
+                        Uncertainty
+                      </span>
+                      <br>
+                      <br>
+                      <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: auto;">
+                      <br>
+                      <span>
+                        <span class="title" style="font-size: larger;">
+                          <b>
+                            <a>
+                              Supernove Era
+                            </a>
+                          </b>
+                        </span>
+                        <br>
+                        <span class="auther Cixin">
+                          By: Cixin Liu
+                        </span>
+                        <br>
+                        <span class="cost">
+                          $20.00
+                        </span>
+                      </span>
+                      <button onclick="localStorage.setItem('Supernova Era', 1);alert('Added to your cart');">
+                        Add to Cart
+                      </button>
+                    </div>
+                  </td>
+                  <td class="book" onclick="window.location.href='BL.html';">
+                    <div class="card">
+                      <span class="genre">
+                        Fiction
+                      </span>
+                      <span class="topic Uncertainty">
+                        Uncertainty
+                      </span>
+                      <br>
+                      <br>
+                      <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: auto;">
+                      <br>
+                      <span>
+                        <span class="title" style="font-size: larger;">
+                          <b>
+                            <a>
+                              Ball Lightning
+                            </a>
+                          </b>
+                        </span>
+                        <br>
+                        <span class="auther Cixin">
+                          By: Cixin Liu
+                        </span>
+                        <br>
+                        <span class="cost">
+                          $20.00
+                        </span>
+                      </span>
+                      <button onclick="localStorage.setItem('Ball Lightning', 1);alert('Added to your cart');">
+                        Add to Cart
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+                <tr class="booksRow">
+                  <td class="book" onclick="window.location.href='ROT.html';">
+                    <div class="card">
+                      <span class="genre">
+                        Fiction
+                      </span>
+                      <span class="topic Uncertainty">
+                        Uncertainty
+                      </span>
+                      <br>
+                      <br>
+                      <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: auto;">
+                      <br>
+                      <span>
+                        <span class="title" style="font-size: larger;">
+                          <b>
+                            <a>
+                              The Redemtion of Time
+                            </a>
+                          </b>
+                        </span>
+                        <br>
+                        <span class="auther Baoshu">
+                          By: Baoshu
+                        </span>
+                        <br>
+                        <span class="cost">
+                          $20.00
+                        </span>
+                      </span>
+                      <button onclick="localStorage.setItem('The Redemtion of Time', 1);alert('Added to your cart');">
+                        Add to Cart
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </section>
+          </article>
           <h2>
             <span style="color:blue;">
               Sci
