--- a/QS.html
+++ b/QS.html
@@ -60,6 +60,11 @@
         <a href="ssPage.html">
           Short Stories
         </a>
+        <hr>
+        <a href="uPage.html">
+          Uncertainty
+        </a>
+        <hr>
       </div>
     </div>
     <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
