--- a/csPage.html
+++ b/csPage.html
@@ -68,7 +68,7 @@
         <hr>
       </div>
     </div>
-    <div class="menu fa fa-search">
+    <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
       Lookup
     </div>
     <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
