--- a/sciPage.html
+++ b/sciPage.html
@@ -82,7 +82,7 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <td>
+          <td class="book" onclick="window.location.href='QS.html';">
           <div class="card">
               <span class="genre">
                 Non-Fiction
